css/screen.css
/* ... */
.clear{ 
  clear:both;
}

li {
  list-style: none;
}

.row-fluid {
    max-width: 960px;
}

/*****************************************************************************/
/*
/* 2013 Updates
/*
/*****************************************************************************/

#map-story {
    margin-top: 20px;
    position: absolute;
    top: 50px;
    right: 10px;
    z-index: 100;
    background: #fff;
}

#map-story h5 {
  padding: 0px 10px;
  color: #6D6E71;
  font-size: 24px;
  font-weight: bold;
}

#map-story ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

#map-story a {
    font-size: 13px;
    background: #FFF;
    color: #6D6E71;
    display: block;
    margin: 0;
    padding: 0;
    border: 1px solid #BBB;
    border-bottom-width: 0;
    min-width: 138px;
    padding: 10px;
    text-decoration: none;
    text-shadow: none;
}

#map-story a:hover {
    background: #fff;
    color: #4D4D4D !important;
    border-left-width: 0px;
}

#map-story li:last-child a {
    border-bottom-width: 1px;
    -webkit-border-radius: 0 0 3px 3px;
    border-radius: 0 0 3px 3px;
}

#map-story li:first-child a {
    -webkit-border-radius: 3px 3px 0 0;
    border-radius: 3px 3px 0 0;
}

#map-story a.active {
    background: #FFF;
    color: #e87d2b;
    border-left-width: 0px;
}

#marker {
        position:absolute;
        margin-top:-25px;
        margin-left:-25px;
        width:50px;
        height:50px;
        display:none;
        pointer-events:all;
    }
.appsIntro {
  padding-bottom: 50px;
}

.carousel-control {
  top: 50%;
}

.community .bios{
  margin: 20px 0px 65px 0px;
}

.page.homeQuote{ 
  padding-top: 50px !important;
}

.logo {
  display: block;
  margin-left: auto;
  margin-right: auto
}

.logo img {
  max-width: 85px;
}

.nav-tabs {
  border: none;
  margin: 45px 0px 0px;
}

.nav-tabs li {
  border: none;
  margin-bottom: -2px;
}

.nav-tabs li a {
  font-size: 24px;
  font-weight: bold;
  background: #F7F7F7;
  color: #6D6E71;
  border-radius: 0px;
}
.nav-tabs li a:hover {
  background: #fff;
  color: #4D4D4D;
  border: none;
}

.nav-tabs li.active a {
  background: #fff;
  color: #e87d2b;
  border: none;
}

.nav-tabs li.active a:hover {
  background: #fff;
  color: #e87d2b;
  border: none;
}

.networkTitle {
  padding-top: 200px;
  padding-left:20px;
}

.panel-collapse {
  color: #e87d2b;
  background: #fff;
  padding: 0px 5px;
}

.panel-body {
  padding: 0px 10px 10px;
  text-shadow: none;
}


.stats2013{
  border-left: 2px solid white;
  padding: 5px 0px 10px 20px;
  margin-left: 15px;
}

.stats2013 p{
  font-size: 14px;
  line-height: 14px;
  margin: 0px;
}

.stats2013 h3{
  font-family: "Sentinel SSm A", "Sentinel SSm B", "Sentinel Book", "Georgia", Times, sans-serif;  text-transform: uppercase;
  font-size: 35px;
  margin: 0px 0px 7px 0px;
  line-height: 30px;
}

.storyContainer {
  position: absolute;
  top: 50px;
  right: 170px;
  z-index: 99;
  background: #e87d2b;
  -webkit-border-radius: 3px;
  border-radius: 3px;
}

.storyContainer p {
    font-size: 13px;
    color: #000;
    display: block;
    margin: 0;
    padding: 0;
    min-width: 138px;
    padding: 10px;
    text-decoration: none;
    text-shadow: none;
}

.superHeadline {
  font-family: 'Gotham A', 'Gotham B', 'Open Sans Regular', 'Verdana', 'Helvetica', Arial;
  font-size: 80px;
  color: #fff;
  margin: 30px 0px 0px 00px;
  text-align: left;
  text-shadow: 0px 2px 6px rgba(0, 0, 0, .5);
  text-transform: uppercase;
  padding: 0px 0px 75px 0px;
}

.stories{
}

.stories h1{
  text-align: right;
  margin-right: 10px;
}

.stories h2{
  margin-top: 0px;
}

.stories p {
  font-size: 18px;
  line-height: 30px;
  text-align: right;
}

.network .people ul {
  margin: 0px 0px 8px 0px;
}

.tab-pane div {
  background: #fff;
  color: #e87d2b !important;
  padding: 15px 20px;
  text-shadow: none;
}

.title {
  min-height: 0px;
  padding-bottom: 0px;
}

.title h1,
.title p {
  text-align: center;
  color:#fff;
  text-shadow: none;
}

.title h1 {
  font-size: 115px !important;
  margin: 90px auto 117px;
  font-weight: 600;
}

.page.quote .title {
  padding-bottom: 100px;
}

.page.quote .title h1 {
  line-height: 10px;
}


 
.title p{ 
  text-transform:uppercase;
  font-size: 63px;
  font-weight: 300;
}

.featuredapps p{
  margin: 0px;
}

.morefellows,
.themes,
.community,
.network{
  margin: 50px 0px 100px;
}
.yearText {
  background: #fff;
  font-size: 16px;

}

.yeartitle .year {
  /*display: inline;*/
  font-size: 40px;
  padding: 10px;
  /*margin: 50px 5px;*/
  cursor: pointer;
/*  position: relative;
  top: 50px;*/
}

.400margin{
  margin-bottom: 400px;
}



/*****************************************************************************/
/*
/* Logos
/*
/*****************************************************************************/

.appspop.adoptadrain {
  background-image: url('../img/apps/adoptadrain.png');
}

.appspop.adoptatwincities {
  background-image: url('../img/apps/adoptatwincities.png');
}

.appspop.archivesocial {
  background-image: url('../img/apps/archivesocial.png');
}

.appspop.big-heavy-world_btv {
  background-image: url('../img/apps/big-heavy-world_btv.jpg');
}

.appspop.bizfriendly {
  background-image: url('../img/apps/bizfriendly_logo.jpg');
}

.appspop.BTVmusicarchiveapp {
  background-image: url('../img/apps/BTVmusicarchiveapp.jpg');
}

.appspop.city_voice {
  background-image: url('../img/apps/cityvoice_logo.jpg');
}

.appspop.civicinsight{
  background-image: url('../img/apps/civicinsight.jpg');
}

.appspop.clickthathood{
  background-image: url('../img/apps/clickthathood.png');
}

.appspop.codeforphillygentrification{
  background-image: url('../img/apps/codeforphillygentrification.png');
}

.appspop.development_fast_pass{
  background-image: url('../img/apps/development_fast_pass.png');
}

.appspop.discover_bps{
  background-image: url('../img/apps/discover_bps.png');
}

.appspop.early_oakland{
  background-image: url('../img/apps/early_oakland.png');
}
/* ... */

